# CloudSecurityScanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  benchmark.py  cg.py  ci.yml  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  security-scan.yml  setup.py  test_aws_integration.py  test_scanner.py
